kubernetes/mini/core/network/smtp-relay/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: smtp-relay
  egress:
    - toFQDNs:
        - matchName: protonmail.com
      toPorts:
        - ports:
            - port: '25'
              protocol: 'TCP'

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-smtp-relay
spec:
  description: "Allow ingress from apps to smtp-relay"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: smtp-relay
      io.kubernetes.pod.namespace: network

  ingress:
    - fromEndpoints:
        - matchLabels:
            mail.home.arpa/smtp-relay: allow
      toPorts:
        - ports:
            - port: '25'
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-smtp-relay-egress
spec:
  description: "Allow pods that require SMTP to send emails"
  endpointSelector:
    matchLabels:
      mail.home.arpa/smtp-relay: allow
  egress:
    - tondpoints:
        - matchLabels:
            app.kubernetes.io/name: smtp-relay
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: '25'
              protocol: TCP
